--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--使用相对布局-->
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--使用线性布局，使导航栏与主体依次显示，互不干涉-->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--增加头布局（导航栏）-->
+    <include layout="@layout/main_title_bar" />
+
+   <!--主体部分用来存放内容-->
+    <FrameLayout
+        android:id="@+id/min_body"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+    </FrameLayout>
+
+    </LinearLayout>
+
+    <!--底部使用横向的线性布局，添加三个按钮:设置宽、高、设置方向为横向，放置底部导航栏按钮！设置背景颜色-->
+    <LinearLayout
+        android:id="@+id/main_bottom_btn"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:background="#F2F2F2">
+
+        <!--设置三个按钮，使用布局的方式，注意这里分别三个自动均分，是weight的用法-->
+        <!--两种方式实现按钮分布：above和layout_alignParentTop-->
+        <RelativeLayout
+            android:id="@+id/bottom_bar_course_bth"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent">
+            <!--添加课程文字-->
+            <TextView
+                android:id="@+id/bottom_bar_text_course"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="3dp"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="课程"
+                android:textSize="14sp"
+                android:textColor="#666666"/>
+
+            <!--设置课程上面的图片-->
+            <ImageView
+                android:id="@+id/bottom_bar_image_course"
+                android:layout_above="@+id/bottom_bar_text_course"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/main_course_icon"
+                android:layout_marginTop="3dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/bottom_bar_exercise_bth"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent">
+
+            <!--添加课程文字-->
+            <TextView
+                android:id="@+id/bottom_bar_text_exercise"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="3dp"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="习题"
+                android:textSize="14sp"
+                android:textColor="#666666"/>
+
+            <!--设置课程上面的图片-->
+            <ImageView
+                android:id="@+id/bottom_bar_image_exercise"
+                android:layout_above="@+id/bottom_bar_text_exercise"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/main_exercises_icon"
+                android:layout_marginTop="3dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/bottom_bar_myInfo_bth"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent">
+
+            <!--添加课程文字-->
+            <TextView
+                android:id="@+id/bottom_bar_text_myInfo"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="3dp"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="我"
+                android:textSize="14sp"
+                android:textColor="#666666"/>
+
+            <!--设置课程上面的图片-->
+            <ImageView
+                android:id="@+id/bottom_bar_image_myInfo"
+                android:layout_above="@+id/bottom_bar_text_myInfo"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/main_my_icon"
+                android:layout_marginTop="3dp" />
+        </RelativeLayout>
+    </LinearLayout>
+</RelativeLayout>
